--- a/5star.rmd
+++ b/5star.rmd
@@ -1,8 +1,17 @@
 ---
+# output:
+#   html_document: 
+#     css: "style2.css"
+#   word_document: default
+
 output:
-  html_document: 
-    css: "style2.css"
-  word_document: default
+  prettydoc::html_pretty:
+    theme: architect
+    toc: yes
+    toc_depth: '3'
+    number_sections: true
+    self_contained: false  
+
 title: "百炼为战五星人物动态"
 author: "公理天城翻译官"
 date: "更新时间：`r Sys.Date()`"
@@ -60,9 +69,13 @@ date: "更新时间：`r Sys.Date()`"
 
 在狂飙加入之后，普通五星池已经有40个机器人，剩下的6个（震天尊，亡灵天尊，大黄蜂，小黄蜂，惊天雷，黑擎）只能在泰坦货币商店买到，如无意外，普通五星池不会再改变了。
 
+## 普通池后续人物
+
+- 挽歌（在2022年3月31日，G1铁皮发布时，已有玩家从普通5星水晶中开出挽歌）
+
 
 # 通用币人物
-天火的发布宣告了新人物开发的停止（虽然后面还出了黑擎、惊天雷和亡灵天尊），每月的专属机器人币也变成了通用币，通用币人物每月在商店中上架3\~4个，轮完之后循环，所以只要你慢慢攒，总能拿到自己要的普通池机器人。
+天火的发布**暂时**宣告了新人物开发的停止（但是后面还出了很多新人物），每月的专属机器人币也变成了通用币，通用币人物每月在商店中上架3\~4个，轮完之后循环，所以只要你慢慢攒，总能拿到自己要的普通池机器人。
 
 
 ## 2019年
@@ -95,7 +108,7 @@ date: "更新时间：`r Sys.Date()`"
 - 11月：热破，斗擎，惊破天
 - 12月：犀牛，巨蝎勇士，爆威，碾碎器
 
-总结：2020年每个季度都采用了3+3+4的方式发布10个人物，一年40个，也正好对应40个普通五星池的人物。百炼为战游戏已经基本上趋于圆寂的状态。
+总结：2020年每个季度都采用了3+3+4的方式发布10个人物，一年40个，也正好对应40个普通五星池的人物。~~游戏已经基本上趋于圆寂的状态~~。
 
 
 ## 2021年
@@ -110,7 +123,7 @@ date: "更新时间：`r Sys.Date()`"
 
 ## 2022年
 
-22年开始，月度人物又变了花样
+22年开始，随着卡邦高调公布新的发展计划，游戏慢慢开始有了起色，而月度的5星人物也不再遵循之前的规律。
 
 - 1月：救护车，爵士，红蜘蛛
 - 2月：声波，雷震，喷气机
@@ -130,10 +143,11 @@ date: "更新时间：`r Sys.Date()`"
 
 2月4日的时候，游戏公司又宣布了新的人物：闹翻天、G1铁皮确定，另新的启动画面上出现了一名疑似是补天士的角色。
 
-
 闹翻天在2月25日登场。
 
 G1铁皮在3月31日登场。
+
+4月12日YouTube的Hasbro Pulse直播中公布了补天士，这张图上依然有一个模糊的影子，网友猜测是BW霸王龙。
 
 # 世代币人物
 指2019年9月卡邦针对G1人物举行的活动，每周世代币商店都有一批人物上架：
@@ -166,7 +180,6 @@ G1铁皮在3月31日登场。
 # 独家人物
 除此之外，下列人物的五星版本有独特的方式获取：
 
-
 - 战术大黄蜂：金轮水晶
 - 侦查大黄蜂：金轮水晶。以及在当时的世代活动中，完成所有世代月目标免费赠送
 - 惊天雷：暴雨天水晶，惊天雷5星竞技场
@@ -174,5 +187,6 @@ G1铁皮在3月31日登场。
 - 震天尊：更好的能量水晶
 - 饿鲨S-1000：5星饿鲨水晶小概率开出
 - 挽歌：在发布时直接明码标价购买：￥648一个五星，没有盲盒套路
-- 闹翻天：直接氪金648或者通过限时礼包（3000能量块）购买，比较亲民
+- 闹翻天：直接氪金648或者通过限时礼包（3000能量块）购买，比较亲民，后续可通过精英传送水晶（3~5星）开出来，可以直接能量块购买，有一周的传送事件竞技场可以获得碎片
+- G1铁皮：发布时使用精英要塞水晶（3~5星）搏概率
 
