五星人物动态（滑流）

--- a/5star.rmd
+++ b/5star.rmd
@@ -22,6 +22,8 @@ date: "更新时间：`r Sys.Date()`"
 
 以下列出五星人物的获取方式演变历程，定期更新。
 
+*注：2020年人物逐渐稳定之后，卡邦已经把所有机器人都更新到2\~4星的池子中，新人物如挽歌也已经进入了2\~4星池，相信后续也会逐步更新，保证五星机器人都能解锁100锻。*
+
 # 五星普通池
 一般指五星碎片水晶能开到的机器人。3\~5星水晶和5星专属水晶中除了该水晶专属人物，其他5星也在5星普通池中选人。
 
@@ -149,6 +151,8 @@ G1铁皮在3月31日登场。
 
 4月12日YouTube的Hasbro Pulse直播中公布了补天士，这张图上依然有一个模糊的影子，网友猜测是BW霸王龙。
 
+5月4日9.1.0更新新封面，不但补天士登场，滑流（Slipstream，一译璇流）也出现了！
+
 # 世代币人物
 指2019年9月卡邦针对G1人物举行的活动，每周世代币商店都有一批人物上架：
 
@@ -187,6 +191,6 @@ G1铁皮在3月31日登场。
 - 震天尊：更好的能量水晶
 - 饿鲨S-1000：5星饿鲨水晶小概率开出
 - 挽歌：在发布时直接明码标价购买：￥648一个五星，没有盲盒套路
-- 闹翻天：直接氪金648或者通过限时礼包（3000能量块）购买，比较亲民，后续可通过精英传送水晶（3~5星）开出来，可以直接能量块购买，有一周的传送事件竞技场可以获得碎片
-- G1铁皮：发布时使用精英要塞水晶（3~5星）搏概率
+- 闹翻天：直接氪金648或者通过限时礼包（3500能量块）购买，比较亲民，后续可通过精英传送水晶（3~5星）开出来，可以直接能量块购买，有一周的传送事件竞技场可以获得碎片
+- G1铁皮：同闹翻天的营销策略完全相同。648￥直接买-开水晶-能量块礼包-专题竞技场开水晶，分阶段满足各类玩家的需求。
 
