龙欣群没了

--- a/longxin.rmd
+++ b/longxin.rmd
@@ -19,11 +19,12 @@ title: "塞伯坦之魂"
 
 塞伯坦联盟群的格局，是和别处不同的：都是一群百炼玩家，一群胶佬，一群政客，可以随时吹水/撕逼/开车。国服的玩家，打完了盟战和特任，每每花几百能量块，买一些高等机器人水晶，测测欧气，——这是开服头一年的事，现在每个3~5星水晶要200能量块，——开着公共频道，吹吹自己开到的新角色，再跟以**羽炫大神**[^羽炫]领衔的“**阁**字盟”[^阁]的朋友讨论一下生物、历史、地理；倘肯多花几千能量块，便可以买几个独家模块水晶，或者T4B礼包，做吹牛的谈资了，如果拿出遗迹券，那就能买遗迹，然后卖了换黄金，但这些玩家，多是收藏党，大抵没有这样阔绰。只有开服玩到现在的土豪，才大大咧咧买进黄金探长遗迹，然后把它卖了。
 
-我从离开某个老外盟起，便在“大家庭”群里当伙计，群主[^马团团]说，战力太低，怕侍候不了开服土豪，就在外面做点事罢。外面的散户盟友，虽然容易说话，但唠唠叨叨缠夹不清的也很不少。他们往往要亲眼看到论坛**下月机器人**的截图，看过游戏里收到邮件没有，又亲看人物币商店里面这几个机器人上架，然后放心：在这严重监督下，编谣言说下个月是钢锁漂移也很为难[^下月机器人]。所以过了几天，群主又说我干不了这事。幸亏念总[^念总]的情面大，辞退不得，便改为专管写全人物教程[^人物教程]的一种无聊职务了。
+我从离开某个老外盟起，便在“大家庭”群里[^群没了]当伙计，群主[^马团团]说，战力太低，怕侍候不了开服土豪，就在外面做点事罢。外面的散户盟友，虽然容易说话，但唠唠叨叨缠夹不清的也很不少。他们往往要亲眼看到论坛**下月机器人**的截图，看过游戏里收到邮件没有，又亲看人物币商店里面这几个机器人上架，然后放心：在这严重监督下，编谣言说下个月是钢锁漂移也很为难[^下月机器人]。所以过了几天，群主又说我干不了这事。幸亏念总[^念总]的情面大，辞退不得，便改为专管写全人物教程[^人物教程]的一种无聊职务了。
 
 [^羽炫]: 指贴吧用户“羽炫2013”。2020年疫情居家期间加入的某传奇人物，号称有战力9万的基地，25个55满锻，并且在游戏的“内测服”玩着6星机器人，全服排名前十的盟他都呆过，等等。只在贴吧活跃，从未透露过自己游戏账号。
 [^阁]: 指疫情期间公屏中出现的一大票新盟，都带“阁”字，大有取代塞伯坦联盟的趋势。然而随着中小学复课，已逐渐消失。
 [^下月机器人]: 曾经大家都比较关注下月机器人，一到月半就开始问下月出什么机器人，卡邦的版主也总留下一些“猜谜”与玩家互动。但自从卡邦总部“搬到”印度，基本上游戏已经被放弃，玩家也多有弃坑，问的人自然少了。由于很长时间钢锁和漂移都没有加入人物币商店，于是每月有人问的时候，总有人编说下月有钢锁或者漂移……
+[^群没了]: 2022年4月26日，塞伯坦联盟大家庭群正式被腾讯和谐。原因不明，但懂的都懂。万幸，该群最后一句话是龙欣发的。后来他们又利用之前“塞伯坦之家（六合一）”群继续了。
 [^马团团]: 指玩家“马团团”，塞伯坦联盟大家庭现任群主。再注：一碰到有人开车，群主的职务就会被人“客气”地交来交去，但终归会回到团团手里。
 [^念总]: 指玩家“念欣郎”，塞伯坦联盟创始人。
 [^人物教程]: [《百炼为战全人物解析》](./chars_book/index.html)
