5星人物动态（5月通用币&滑流）

--- a/5star.rmd
+++ b/5star.rmd
@@ -125,13 +125,14 @@ date: "更新时间：`r Sys.Date()`"
 
 ## 2022年
 
-22年开始，随着卡邦高调公布新的发展计划，游戏慢慢开始有了起色，而月度的5星人物也不再遵循之前的规律。
+22年开始，随着卡邦高调公布新的发展计划，游戏慢慢开始有了起色，而月度的5星人物也不再遵循之前的规律。自5月开始则变成了每两周放一批。
 
 - 1月：救护车，爵士，红蜘蛛
 - 2月：声波，雷震，喷气机
 - 3月：横炮，警车，巨蝎勇士，惊破天
 - 4月：狂飙，录音机，恐龙勇士，碾碎器
-- 5月：
+- 5月前两周：碎骨魔，热破
+- 5月后两周：猩猩队长，黄豹，野牛，反冲
 - 6月：
 - 7月：
 - 8月：
@@ -153,6 +154,8 @@ G1铁皮在3月31日登场。
 
 5月4日9.1.0更新新封面，不但补天士登场，滑流（Slipstream，一译璇流）也出现了！
 
+滑流在5月19日登场。
+
 # 世代币人物
 指2019年9月卡邦针对G1人物举行的活动，每周世代币商店都有一批人物上架：
 
@@ -165,6 +168,10 @@ G1铁皮在3月31日登场。
 # 野兽币人物
 
 指2019年12月卡邦针对BW人物举行的活动。总共就6个BW人物（猩猩队长/巨蝎勇士/黄豹/犀牛/黄蜂勇士/恐龙勇士），尽数上架。
+
+# 冷饭活动
+
+2022年开始为填补新人物发布间空档期（两周），卡邦会把一些之前的活动重新拿出来。例如霸天虎活动，电影人物活动。套路都是肝主题币，换3/4/5星人物。
 
 # 泰坦碎片（巨人碎片）商店人物
 以下人物在泰坦碎片商店可以购得，长期有效。
