--- a/5star.rmd
+++ b/5star.rmd
@@ -125,15 +125,15 @@ date: "更新时间：`r Sys.Date()`"
 
 ## 2022年
 
-22年开始，随着卡邦高调公布新的发展计划，游戏慢慢开始有了起色，而月度的5星人物也不再遵循之前的规律。自5月开始则变成了每两周放一批。
+22年开始，随着卡邦高调公布新的发展计划，游戏慢慢开始有了起色，而月度的人物币人物也不再遵循之前的规律，二月之后也不再称为月度机器人而是**展示机器人**。以下改为按发布日期排列。
 
 - 1月：救护车，爵士，红蜘蛛
 - 2月：声波，雷震，喷气机
-- 3月：横炮，警车，巨蝎勇士，惊破天
-- 4月：狂飙，录音机，恐龙勇士，碾碎器
-- 5月前两周：碎骨魔，热破
-- 5月后两周：猩猩队长，黄豹，野牛，反冲
-- 6月：
+- 2月24日：横炮，警车，巨蝎勇士，惊破天
+- 3月31日：狂飙，录音机，恐龙勇士，碾碎器
+- 5月5日：碎骨魔，热破
+- 5月19日：猩猩队长，黄豹，野牛，反冲
+- 6月23日：挽歌，阿尔茜，千斤顶，震荡波
 - 7月：
 - 8月：
 - 9月：
@@ -144,17 +144,19 @@ date: "更新时间：`r Sys.Date()`"
 
 
 
-2月4日的时候，游戏公司又宣布了新的人物：闹翻天、G1铁皮确定，另新的启动画面上出现了一名疑似是补天士的角色。
+2月4日的时候，游戏公司又宣布了新的人物闹翻天和G1铁皮。新的启动画面上又出现了一名疑似是补天士的角色。
 
 闹翻天在2月25日登场。
 
 G1铁皮在3月31日登场。
 
-4月12日YouTube的Hasbro Pulse直播中公布了补天士，这张图上依然有一个模糊的影子，网友猜测是BW霸王龙。
+4月12日YouTube的Hasbro Pulse直播中公布了补天士，这张图上依然有一个模糊的影子，网友猜测是BW霸王龙，也有猜是飞毛腿和双面人（出击/反击）的。
 
 5月4日9.1.0更新新封面，不但补天士登场，滑流（Slipstream，一译璇流）也出现了！
 
 滑流在5月19日登场。
+
+补天士在6月23日登场。同时预告的有**音板（Soundblaster），克劳莉娅（Chromia），飞毛腿（Sunstreaker）和封锁（Dead End）**——看来卡邦真的是在新人物方面加大了研发投入！
 
 # 世代币人物
 指2019年9月卡邦针对G1人物举行的活动，每周世代币商店都有一批人物上架：
@@ -201,6 +203,7 @@ G1铁皮在3月31日登场。
 - 闹翻天：直接氪金648或者通过限时礼包（3500能量块）购买，比较亲民，后续可通过精英传送水晶（3~5星）开出来，可以直接能量块购买，有一周的传送事件竞技场可以获得碎片
 - G1铁皮：同闹翻天的营销策略完全相同。648￥直接买-开精英要塞水晶-能量块礼包-专题竞技场开水晶，分阶段满足各类玩家的需求。
 - 滑流：精英恶毒嘲讽水晶，其他没变。从这里也能看出卡邦正在试点“五周专题人物+两周炒冷饭”的人物发布策略。
+- 补天士：精英英勇火焰水晶。
 
 
 <!-- ```{r echo=FALSE, message=FALSE, warning=FALSE} -->
