五星动态更新，闹翻天通贩

--- a/5star.rmd
+++ b/5star.rmd
@@ -9,7 +9,7 @@ output:
     theme: architect
     toc: yes
     toc_depth: '3'
-    number_sections: true
+    number_sections: false
     self_contained: false  
 
 title: "百炼为战五星人物动态"
@@ -74,6 +74,7 @@ date: "更新时间：`r Sys.Date()`"
 ## 普通池后续人物
 
 - 挽歌（在2022年3月31日，G1铁皮发布时，已有玩家从普通5星水晶中开出挽歌）
+- 闹翻天（2022年6月底）
 
 
 # 通用币人物
@@ -125,7 +126,7 @@ date: "更新时间：`r Sys.Date()`"
 
 ## 2022年
 
-22年开始，随着卡邦高调公布新的发展计划，游戏慢慢开始有了起色，而月度的人物币人物也不再遵循之前的规律，二月之后也不再称为月度机器人而是**展示机器人**。以下改为按发布日期排列。
+22年开始，随着卡邦高调公布新的发展计划，游戏慢慢开始有了起色，而月度的人物币人物也不再遵循之前的规律，二月之后也不再称为月度机器人而是**展示机器人**，所以后面改为按发布日期列出。
 
 - 1月：救护车，爵士，红蜘蛛
 - 2月：声波，雷震，喷气机
@@ -134,13 +135,6 @@ date: "更新时间：`r Sys.Date()`"
 - 5月5日：碎骨魔，热破
 - 5月19日：猩猩队长，黄豹，野牛，反冲
 - 6月23日：挽歌，阿尔茜，千斤顶，震荡波
-- 7月：
-- 8月：
-- 9月：
-- 10月：
-- 11月：
-- 12月：
-
 
 
 
