--- a/5star.rmd
+++ b/5star.rmd
@@ -135,7 +135,8 @@ date: "更新时间：`r Sys.Date()`"
 - 5月5日：碎骨魔，热破
 - 5月19日：猩猩队长，黄豹，野牛，反冲
 - 6月23日：挽歌，阿尔茜，千斤顶，震荡波
-
+- 7月28日：天火，探长
+- 8月11日：搅拌者，斗擎，钢锁，漂移
 
 
 2月4日的时候，游戏公司又宣布了新的人物闹翻天和G1铁皮。新的启动画面上又出现了一名疑似是补天士的角色。
@@ -150,7 +151,11 @@ G1铁皮在3月31日登场。
 
 滑流在5月19日登场。
 
-补天士在6月23日登场。同时预告的有**音板（Soundblaster），克劳莉娅（Chromia），飞毛腿（Sunstreaker）和封锁（Dead End）**——看来卡邦真的是在新人物方面加大了研发投入！
+补天士在6月23日登场。同时预告的有**音板（Soundblaster，战术系），克劳莉娅（Chromia，科技系），飞毛腿（Sunstreaker，斗士系）和封锁（Dead End，爆破系，未见头像）**——看来卡邦真的是在新人物方面加大了研发投入！
+
+7月27日更新9.2版封面为飞毛腿对抗音板，飞毛腿的胸口窗户上反射着克劳莉娅。
+
+飞毛腿在8月11日登场。
 
 # 世代币人物
 指2019年9月卡邦针对G1人物举行的活动，每周世代币商店都有一批人物上架：
@@ -168,6 +173,8 @@ G1铁皮在3月31日登场。
 # 冷饭活动
 
 2022年开始为填补新人物发布间空档期（两周），卡邦会把一些之前的活动重新拿出来。例如霸天虎活动，电影人物活动。套路都是肝主题币，换3/4/5星人物。
+
+汽车人事件（2022年7月28日-8月11日）：通天晓，阿尔茜，爵士，横炮，录音机，钢锁，幻影，战擎，警车，救护车，千斤顶，风刃。五星版本20000币一个，配合月度目标弄一个五星很容易，专属的挑战图打得下来的话，再弄一个也不是问题。
 
 # 泰坦碎片（巨人碎片）商店人物
 以下人物在泰坦碎片商店可以购得，长期有效。
@@ -196,7 +203,7 @@ G1铁皮在3月31日登场。
 - 挽歌：在发布时直接明码标价购买：￥648一个五星，没有盲盒套路
 - 闹翻天：直接氪金648或者通过限时礼包（3500能量块）购买，比较亲民，后续可通过精英传送水晶（3~5星）开出来，可以直接能量块购买，有一周的传送事件竞技场可以获得碎片
 - G1铁皮：同闹翻天的营销策略完全相同。648￥直接买-开精英要塞水晶-能量块礼包-专题竞技场开水晶，分阶段满足各类玩家的需求。
-- 滑流：精英恶毒嘲讽水晶，其他没变。从这里也能看出卡邦正在试点“五周专题人物+两周炒冷饭”的人物发布策略。
+- 滑流：精英恶毒嘲讽水晶，其他没变。从这里也能看出卡邦正在试点“五周专题人物”外加“两周炒冷饭”（也可不加）的人物发布策略。
 - 补天士：精英英勇火焰水晶。
 
 
