--- a/longxin.rmd
+++ b/longxin.rmd
@@ -334,7 +334,7 @@ title: "塞伯坦之魂"
 
 我问问他的景况。他只是摇头。
 
-“非常难。第6个游戏账号也托人代打了，却总是带不动……又没法氪金……什么地方都要钱，没有……工资又少。你们广州，黑人这个问题很严重，长此下去，要亡国啊……”
+“非常难。我的主号，就是那个吃百家饭长大的龙欣号，被小学生拿去开挂过传奇3，封了。真是太狗，我震天尊都已经双满了还打个毛的传奇3。其他的嘛……第6个小号也托人代打了，却总是带不动……又没法氪金……什么地方都要钱……工资又少。你们广州，黑人这个问题很严重，长此下去，要亡国啊……”
 
 他只是摇头；脸上虽然刻着许多皱纹，却全然不动，仿佛石像一般。他大约只是觉得苦，却又形容不出，沉默了片时，便拿起手机打开微信，发了几条消息。等我去看时——
 
