--- a/5star.rmd
+++ b/5star.rmd
@@ -205,6 +205,7 @@ G1铁皮在3月31日登场。
 - G1铁皮：同闹翻天的营销策略完全相同。648￥直接买-开精英要塞水晶-能量块礼包-专题竞技场开水晶，分阶段满足各类玩家的需求。
 - 滑流：精英恶毒嘲讽水晶，其他没变。从这里也能看出卡邦正在试点“五周专题人物”外加“两周炒冷饭”（也可不加）的人物发布策略。
 - 补天士：精英英勇火焰水晶。
+- 飞毛腿：精英虚荣水晶。
 
 
 <!-- ```{r echo=FALSE, message=FALSE, warning=FALSE} -->
