--- a/5star.rmd
+++ b/5star.rmd
@@ -137,6 +137,7 @@ date: "更新时间：`r Sys.Date()`"
 - 6月23日：挽歌，阿尔茜，千斤顶，震荡波
 - 7月28日：天火，探长
 - 8月11日：搅拌者，斗擎，钢锁，漂移
+- 9月15日：战擎，爆威，幻影，犀牛
 
 
 2月4日的时候，游戏公司又宣布了新的人物闹翻天和G1铁皮。新的启动画面上又出现了一名疑似是补天士的角色。
@@ -156,6 +157,8 @@ G1铁皮在3月31日登场。
 7月27日更新9.2版封面为飞毛腿对抗音板，飞毛腿的胸口窗户上反射着克劳莉娅。
 
 飞毛腿在8月11日登场。
+
+音板在9月15日登场。
 
 # 世代币人物
 指2019年9月卡邦针对G1人物举行的活动，每周世代币商店都有一批人物上架：
@@ -206,6 +209,7 @@ G1铁皮在3月31日登场。
 - 滑流：精英恶毒嘲讽水晶，其他没变。从这里也能看出卡邦正在试点“五周专题人物”外加“两周炒冷饭”（也可不加）的人物发布策略。
 - 补天士：精英英勇火焰水晶。
 - 飞毛腿：精英虚荣水晶。
+- 音板：精英失真水晶。
 
 
 <!-- ```{r echo=FALSE, message=FALSE, warning=FALSE} -->
