--- a/longxin.rmd
+++ b/longxin.rmd
@@ -298,7 +298,9 @@ title: "塞伯坦之魂"
 
 
 # 尾声
-由于经营不善，百炼为战在印度公司手上也没有活过两年，终于在五星6阶发布后因为bug太多而无疾而终。玩家们四散而去，有的成了公司领导，有的成了玩具大咖，或者各自岗位上的佼佼者，有的顺利抱得美人归。但他们都有一个共同的特点：对百炼为战的生涯绝口不提。
+由于经营不善，百炼为战在印度公司手上也没有活过两年[^关服]，终于在五星6阶发布后因为bug太多而无疾而终。玩家们四散而去，有的成了公司领导，有的成了玩具大咖，或者各自岗位上的佼佼者，有的顺利抱得美人归。但他们都有一个共同的特点：对百炼为战的生涯绝口不提。
+
+[^关服]: 在[中篇]一开头提到卡邦2020年10月8日关掉论坛，我便在此文随口写下了“没有活过两年”的预言，没想到基本上成真了——在两年零一个星期后，卡邦于2022年10月15日宣布了关服的决定，并将在2023年1月13日将《百炼为战》正式下线。
 
 一日是天气很冷的午后，我来陈老或家吃过午饭，坐着喝茶，觉得外面有人进来了，便回头去看。我看时，不由的非常出惊，慌忙站起身，迎着走去。
 
