--- a/5star.rmd
+++ b/5star.rmd
@@ -18,7 +18,7 @@ date: "更新时间：`r Sys.Date()`"
 ---
 
 
-游戏最高星等为五星，以下列出五星人物的获取方式演变历程。
+游戏已宣布关服，最高星等为五星，以下列出五星人物发布历程与获取方式。
 
 *注：2020年人物逐渐稳定之后，卡邦已经把所有机器人都更新到2\~4星的池子中，新人物如挽歌也已经进入了2\~4星池，相信后续也会逐步更新，保证五星机器人都能解锁100锻。*
 
@@ -137,7 +137,7 @@ date: "更新时间：`r Sys.Date()`"
 - 8月11日：搅拌者，斗擎，钢锁，漂移
 - 9月15日：战擎，爆威，幻影，犀牛
 - 10月20日（游戏已经宣布关服）：黄蜂勇士，巨蝎勇士
-
+- 11月3日：汽车大师，通天晓，风刃，路障
 
 2月4日的时候，游戏公司又宣布了新的人物闹翻天和G1铁皮。新的启动画面上又出现了一名疑似是补天士的角色。
 
