--- a/5star.rmd
+++ b/5star.rmd
@@ -18,9 +18,9 @@ date: "更新时间：`r Sys.Date()`"
 ---
 
 
-游戏已宣布关服，最高星等为五星，以下列出五星人物发布历程与获取方式。
+**游戏已正式关服**，最高星等为五星，以下列出五星人物发布历程与获取方式。
 
-*注：2020年人物逐渐稳定之后，卡邦已经把所有机器人都更新到2\~4星的池子中，新人物如挽歌也已经进入了2\~4星池，相信后续也会逐步更新，保证五星机器人都能解锁100锻。*
+*注：2020年人物逐渐稳定之后，卡邦已经把所有机器人都更新到2\~4星的池子中，新人物如挽歌也已经进入了2\~4星池，保证五星机器人都能解锁100锻。*
 
 # 五星普通池
 一般指五星碎片水晶能开到的机器人。3\~5星水晶和5星专属水晶中除了该水晶专属人物，其他5星也在5星普通池中选人。
@@ -137,7 +137,7 @@ date: "更新时间：`r Sys.Date()`"
 - 8月11日：搅拌者，斗擎，钢锁，漂移
 - 9月15日：战擎，爆威，幻影，犀牛
 - 10月20日（游戏已经宣布关服）：黄蜂勇士，巨蝎勇士
-- 11月3日：汽车大师，通天晓，风刃，路障
+- 11月3日：汽车大师，通天晓，风刃，路障 —— **这是游戏通用币最后能买到的人物**
 
 2月4日的时候，游戏公司又宣布了新的人物闹翻天和G1铁皮。新的启动画面上又出现了一名疑似是补天士的角色。
 
@@ -157,9 +157,10 @@ G1铁皮在3月31日登场。
 
 飞毛腿在8月11日登场。
 
-音板在9月15日登场。
+**音板在9月15日登场，成为游戏最后一个人物**。由于游戏关服，克劳莉娅和封锁没能到来。
 
 # 世代币人物
+
 指2019年9月卡邦针对G1人物举行的活动，每周世代币商店都有一批人物上架：
 
 
